--- a/app/src/main/res/drawable/reset_password.xml
+++ b/app/src/main/res/drawable/reset_password.xml
@@ -1,141 +1,95 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="564.98dp"
-    android:height="512.3dp"
-    android:viewportWidth="564.98"
-    android:viewportHeight="512.3">
+    android:width="364dp"
+    android:height="280dp"
+    android:viewportWidth="816.22"
+    android:viewportHeight="621">
   <path
-      android:pathData="M390.43,511.01H230.11c-24.04,0 -43.61,-19.56 -43.61,-43.61V43.61c0,-24.04 19.56,-43.61 43.61,-43.61h160.31c24.04,0 43.61,19.56 43.61,43.61 2.98,170.18 8.07,360.76 0,423.79 0,24.05 -19.56,43.61 -43.61,43.61l-0,0Z"
+      android:pathData="M326.61,128.78h-2.98L323.63,47.21A47.21,47.21 0,0 0,276.42 0L103.6,0a47.21,47.21 0,0 0,-47.21 47.21L56.39,494.71a47.21,47.21 0,0 0,47.21 47.21L276.42,541.92a47.21,47.21 0,0 0,47.21 -47.21v-307.87h2.98Z"
       android:fillColor="#3f3d56"/>
   <path
-      android:pathData="M436.27,155.88c-1.02,0 -1.84,0.83 -1.84,1.84v59.03c0,1.02 0.83,1.84 1.84,1.84s1.84,-0.83 1.84,-1.84v-59.03c0,-1.02 -0.83,-1.84 -1.84,-1.84Z"
-      android:fillColor="#3f3d56"/>
-  <path
-      android:pathData="M429.88,43.61V467.39c0,20.93 -16.29,38.05 -36.89,39.38h-0.01c-0.3,0.02 -0.61,0.04 -0.92,0.05 -0.54,0.03 -1.09,0.04 -1.64,0.04 0,0 -2.03,-0.15 -5.74,-0.42 -3.74,-0.28 -9.2,-0.69 -15.99,-1.24 -2.04,-0.16 -4.19,-0.33 -6.46,-0.52 -4.52,-0.37 -9.48,-0.77 -14.8,-1.24 -2.12,-0.18 -4.32,-0.37 -6.56,-0.56 -11.46,-0.99 -24.29,-2.14 -37.82,-3.45 -2.29,-0.21 -4.59,-0.43 -6.92,-0.66 -0.61,-0.06 -105.48,-26.43 -105.48,-31.37V43.61c0,-21.8 17.66,-39.46 39.46,-39.46h23.56c3.76,0 6.79,2.93 7.11,6.69 0.03,0.25 0.06,0.5 0.1,0.75 0.68,3.77 4.14,6.4 7.98,6.4h82.8c3.84,0 7.3,-2.63 7.98,-6.4 0.05,-0.25 0.07,-0.5 0.1,-0.75 0.32,-3.75 3.35,-6.69 7.11,-6.69h23.56c21.8,0 39.46,17.66 39.46,39.46h-0Z"
+      android:pathData="M278.33,12.28L255.77,12.28A16.75,16.75 0,0 1,240.26 35.36L141.25,35.36a16.75,16.75 0,0 1,-15.51 -23.08L104.67,12.28A35.26,35.26 0,0 0,69.42 47.54L69.42,494.38a35.26,35.26 0,0 0,35.26 35.26L278.33,529.64a35.26,35.26 0,0 0,35.26 -35.26h0L313.58,47.54A35.26,35.26 0,0 0,278.33 12.28Z"
       android:fillColor="#fff"/>
   <path
-      android:pathData="M185.59,111.61c-1.02,0 -1.84,0.83 -1.84,1.84v14.76c0,1.02 0.83,1.84 1.84,1.84s1.84,-0.83 1.84,-1.84v-14.76c0,-1.02 -0.83,-1.84 -1.84,-1.84Z"
+      android:pathData="M382,542h-381a1,1 0,0 1,0 -2h381a1,1 0,0 1,0 2Z"
+      android:fillColor="#cbcbcb"/>
+  <path
+      android:pathData="M191.5,261.23m-84.45,0a84.45,84.45 0,1 1,168.89 0a84.45,84.45 0,1 1,-168.89 0"
+      android:fillColor="#246bfd"/>
+  <path
+      android:pathData="M183.13,293.45a8.76,8.76 0,0 1,-5.27 -1.75l-0.09,-0.07 -19.85,-15.18a8.82,8.82 0,1 1,10.73 -14l12.85,9.86L211.89,232.67a8.82,8.82 0,0 1,12.36 -1.63l0,0 -0.19,0.26 0.19,-0.26a8.83,8.83 0,0 1,1.63 12.36l-35.73,46.59a8.82,8.82 0,0 1,-7.01 3.44Z"
+      android:fillColor="#fff"/>
+  <path
+      android:pathData="M694.24,550.3a26.26,26.26 0,0 1,3.61 -4.6c0.56,-0.59 1.16,-1.14 1.77,-1.67a28.14,28.14 0,0 1,46.4 16.01c4.12,-15.25 -6.61,-30.28 -17.41,-41.82 -10.8,-11.54 -23.14,-24.19 -23.08,-40 0.03,-8.8 4.33,-16.64 10.83,-22.46 0.2,-0.18 0.4,-0.35 0.61,-0.52a41.07,41.07 0,0 1,28.29 -9.86c19.2,1.03 35.96,13.93 47.6,29.24 18.74,24.63 26.95,59.2 13.83,87.23 -11.54,24.66 -36.15,39.3 -61.27,51.07q-5.26,2.47 -10.5,4.78c-0.02,0.01 -0.05,0.02 -0.07,0.03 -0.17,0.07 -0.34,0.15 -0.49,0.22 -0.72,0.32 -1.44,0.64 -2.16,0.95l0.33,0.22 1.03,0.67c-0.36,-0.22 -0.71,-0.43 -1.07,-0.64 -0.11,-0.07 -0.22,-0.13 -0.33,-0.19 -12.34,-7.4 -24.84,-15.23 -33.37,-26.79C689.97,580.17 686.42,562.98 694.24,550.3Z"
+      android:fillColor="#f1f1f1"/>
+  <path
+      android:pathData="M776.55,522.44a69.82,69.82 0,0 1,5.38 19.53,60.62 60.62,0 0,1 -0.73,18.01 77.67,77.67 0,0 1,-15.58 33.32,111.79 111.79,0 0,1 -20.18,19.62q-5.26,2.47 -10.5,4.78c-0.02,0.01 -0.05,0.02 -0.07,0.03 -0.17,0.07 -0.34,0.15 -0.49,0.22 -0.72,0.32 -1.44,0.64 -2.16,0.95l0.33,0.22 1.03,0.67c-0.36,-0.22 -0.71,-0.43 -1.07,-0.64 -0.11,-0.07 -0.22,-0.13 -0.33,-0.19a61.8,61.8 0,0 0,-11.21 -55.65A62.33,62.33 0,0 0,697.85 545.71c0.56,-0.59 1.16,-1.14 1.77,-1.67a64.62,64.62 0,0 1,9.9 5.66,63.32 63.32,0 0,1 23.96,31.74 64.73,64.73 0,0 1,1.4 36.19c0.62,-0.4 1.24,-0.82 1.85,-1.23 11.49,-7.75 22.08,-17.06 30.06,-28.47a72.26,72.26 0,0 0,12.82 -32.58c1.53,-12.83 -1.68,-25.45 -7.41,-36.91a151.26,151.26 0,0 0,-23.7 -33.67,171.87 171.87,0 0,0 -31.78,-27.32 1.24,1.24 0,0 1,-0.37 -1.66,1.05 1.05,0 0,1 0.61,-0.52 0.92,0.92 0,0 1,0.78 0.16c1.44,0.96 2.87,1.93 4.28,2.93a173.82,173.82 0,0 1,31.77 29.02C762.83,497.9 771.05,509.63 776.55,522.44Z"
+      android:fillColor="#fff"/>
+  <path
+      android:pathData="M525.04,21.28m-17.93,0a17.93,17.93 0,1 1,35.87 0a17.93,17.93 0,1 1,-35.87 0"
+      android:fillColor="#f1f1f1"/>
+  <path
+      android:pathData="M748.04,268.28m-10.93,0a10.93,10.93 0,1 1,21.87 0a10.93,10.93 0,1 1,-21.87 0"
+      android:fillColor="#f1f1f1"/>
+  <path
+      android:pathData="M428.04,298.28m-10.93,0a10.93,10.93 0,1 1,21.87 0a10.93,10.93 0,1 1,-21.87 0"
+      android:fillColor="#f1f1f1"/>
+  <path
+      android:pathData="M434.22,621h381a1,1 0,1 0,0 -2h-381a1,1 0,0 0,0 2Z"
+      android:fillColor="#cbcbcb"/>
+  <path
+      android:pathData="M773.17,96.63a14.65,14.65 0,0 0,-28.14 -7.43l-30.92,35.44 9.07,25.34 31.09,-41.42A14.57,14.57 0,0 0,773.17 96.63Z"
+      android:fillColor="#ffb7b7"/>
+  <path
+      android:pathData="M645.01,234.55l102.63,-109.53l-13.84,-22.01l-128.72,108.86l39.94,22.67z"
       android:fillColor="#3f3d56"/>
   <path
-      android:pathData="M185.59,155.88c-1.02,0 -1.84,0.83 -1.84,1.84v28.59c0,1.02 0.83,1.84 1.84,1.84s1.84,-0.83 1.84,-1.84v-28.59c0,-1.02 -0.83,-1.84 -1.84,-1.84v0Z"
-      android:fillColor="#3f3d56"/>
-  <path
-      android:pathData="M185.59,196.47c-1.02,0 -1.84,0.83 -1.84,1.84v28.59c0,1.02 0.83,1.84 1.84,1.84s1.84,-0.83 1.84,-1.84v-28.59c0,-1.02 -0.83,-1.84 -1.84,-1.84Z"
-      android:fillColor="#3f3d56"/>
-  <path
-      android:pathData="M217.72,10.61L253.07,10.61A0.31,0.31 0,0 1,253.38 10.92L253.38,14.91A0.31,0.31 0,0 1,253.07 15.22L217.72,15.22A0.31,0.31 0,0 1,217.41 14.91L217.41,10.92A0.31,0.31 0,0 1,217.72 10.61z"
-      android:fillColor="#e6e6e6"/>
-  <path
-      android:pathData="M372.69,11.53m-3.69,0a3.69,3.69 0,1 1,7.38 0a3.69,3.69 0,1 1,-7.38 0"
-      android:fillColor="#e6e6e6"/>
-  <path
-      android:pathData="M382.84,11.53m-3.69,0a3.69,3.69 0,1 1,7.38 0a3.69,3.69 0,1 1,-7.38 0"
-      android:fillColor="#e6e6e6"/>
-  <path
-      android:pathData="M392.99,11.53m-3.69,0a3.69,3.69 0,1 1,7.38 0a3.69,3.69 0,1 1,-7.38 0"
-      android:fillColor="#e6e6e6"/>
-  <path
-      android:pathData="M14.31,511.11c0,0.66 0.53,1.19 1.19,1.19H563.79c0.66,0 1.19,-0.53 1.19,-1.19 0,-0.66 -0.53,-1.19 -1.19,-1.19H15.5c-0.66,0 -1.19,0.53 -1.19,1.19Z"
-      android:fillColor="#ccc"/>
-  <path
-      android:pathData="M189.13,503.29l-11.24,-0l-5.35,-43.37l16.59,0l-0,43.37z"
-      android:fillColor="#ffb6b6"/>
-  <path
-      android:pathData="M150.61,503.04h0c-0.35,0.59 -0.53,2.49 -0.53,3.18h0c0,2.11 1.71,3.82 3.82,3.82h34.82c1.44,0 2.6,-1.17 2.6,-2.6v-1.45s1.72,-4.36 -1.82,-9.73c0,0 -4.41,4.21 -10.99,-2.38l-1.94,-3.52 -14.06,10.28 -7.79,0.96c-1.7,0.21 -3.22,-0.03 -4.09,1.44h-0v0Z"
+      android:pathData="M622.11,132m-36,0a36,36 0,1 1,72 0a36,36 0,1 1,-72 0"
       android:fillColor="#2f2e41"/>
   <path
-      android:pathData="M126.95,443.05l-11.24,-0.04l-5.21,-43.39l16.59,0.05l-0.14,43.37z"
-      android:fillColor="#ffb6b6"/>
-  <path
-      android:pathData="M88.43,442.67h0c-0.35,0.59 -0.54,2.49 -0.54,3.18h0c-0.01,2.11 1.7,3.82 3.8,3.83l34.82,0.11c1.44,0 2.61,-1.16 2.61,-2.6l0,-1.45s1.74,-4.35 -1.79,-9.73c0,0 -4.42,4.19 -10.99,-2.42l-1.93,-3.52 -14.09,10.24 -7.8,0.93c-1.71,0.2 -3.22,-0.04 -4.1,1.43h-0Z"
+      android:pathData="M625,111.66A75.49,75.49 0,0 1,652.46 93.9c6.64,-2.46 13.86,-3.98 20.8,-2.58 6.94,1.4 13.5,6.2 15.44,13.01 1.58,5.57 -0.05,11.56 -2.51,16.81 -2.46,5.24 -5.74,10.1 -7.72,15.54a35.47,35.47 0,0 0,35.69 47.56c-6.82,0.91 -13.11,4.12 -19.77,5.82 -6.67,1.71 -14.53,1.59 -19.49,-3.19 -5.24,-5.05 -5.35,-13.27 -5.09,-20.54q0.57,-16.22 1.13,-32.44c0.19,-5.52 0.36,-11.21 -1.63,-16.36 -1.99,-5.15 -6.72,-9.66 -12.23,-9.61 -4.18,0.04 -7.88,2.57 -11.24,5.07 -3.35,2.5 -6.9,5.16 -11.07,5.54 -4.17,0.37 -8.92,-2.71 -8.61,-6.88Z"
       android:fillColor="#2f2e41"/>
   <path
-      android:pathData="M172.73,240l-14,1s-47.4,26.95 -51.4,32.95 -9.5,14.5 -4.5,23.5 1.19,117.97 1.19,117.97l23.89,-5.4 15.31,-114.02 32,-4.5s11,23.73 7,43.37 -6,31.63 -6,31.63l-5,116 19.5,-0.5 17.5,-107.5 30,-85 -39,-46 -26.5,-3.5Z"
-      android:fillColor="#2f2e41"/>
+      android:pathData="M485.38,373.72a14.65,14.65 0,0 1,-11.04 -26.92l31.1,-35.28 26.3,5.68 -37,36.24a14.57,14.57 0,0 1,-9.37 20.29Z"
+      android:fillColor="#ffb7b7"/>
   <path
-      android:pathData="M241.73,117l-29,3 -3,10 -28,15 9,63 -7,11 3,11s-8,1 -7,7l-18,3s23.87,4.87 28.94,28.94 47.06,27.06 47.06,27.06l33,-103 3,-61 -23,-6 -9,-9Z"
-      android:fillColor="#e6e6e6"/>
-  <path
-      android:pathData="M226.45,90.66m-22.54,0a22.54,22.54 0,1 1,45.09 0a22.54,22.54 0,1 1,-45.09 0"
-      android:fillColor="#ffb6b6"/>
-  <path
-      android:pathData="M214.73,111h0s-20,-1 -18,-17c-4.95,-17.04 -0.57,-28.1 15,-32 0,0 4,-1 5,-1 13.15,0 20,4 20,4 0,0 -1,-3.96 0,-2.98s2,2.98 2,2.98c0,0 10,5 10,15s0,6 0,6c0,0 -2,0 -4,-6s-14.95,-2 -14.95,-2l0.95,2 -3,-1 -3,3 -2,-1s-8,0 -7,0 0.3,6.8 0.3,6.8l-7.3,8.2 8,15h-2Z"
-      android:fillColor="#2f2e41"/>
-  <path
-      android:pathData="M108.18,230.35c-5.69,3.11 -8.71,8.56 -6.73,12.19s8.2,4.04 13.89,0.93c2.49,-1.36 4.47,-3.17 5.74,-5.08l23.96,-13.47 -6.56,-11.11 -22.92,14.46c-2.29,0.04 -4.89,0.72 -7.38,2.08Z"
-      android:fillColor="#ffb6b6"/>
-  <path
-      android:pathData="M188.98,145.47s-9.39,-3.58 -12.63,0.73 -24.61,56.53 -24.61,56.53l-31.36,16.38 8.82,15.36 40.39,-13.45 26.65,-48.73 -7.25,-26.82Z"
-      android:fillColor="#e6e6e6"/>
-  <path
-      android:pathData="M485.15,317v106c0,9.37 -7.63,17 -17,17H206.15c-9.37,0 -17,-7.63 -17,-17v-106c0,-9.37 7.63,-17 17,-17H468.15c9.37,0 17,7.63 17,17Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M485.15,317v106c0,9.37 -7.63,17 -17,17L206.15,440c-9.37,0 -17,-7.63 -17,-17v-106c0,-9.37 7.63,-17 17,-17L468.15,300c9.37,0 17,7.63 17,17ZM468.15,438c8.28,0 15,-6.72 15,-15v-53.44c0,-37.31 -30.25,-67.56 -67.56,-67.56L206.15,302c-8.28,0 -15,6.72 -15,15v106c0,8.28 6.72,15 15,15L468.15,438Z"
+      android:pathData="M587.7,247.4l-77.51,97.3l-23.63,-10.85l91.11,-141.85l10.03,55.39z"
       android:fillColor="#3f3d56"/>
   <path
-      android:pathData="M306.76,364.04h-34.22c-0.86,0 -1.56,0.7 -1.56,1.56s0.7,1.56 1.56,1.56h34.22c0.86,0 1.56,-0.7 1.56,-1.56s-0.7,-1.56 -1.56,-1.56Z"
-      android:fillColor="#246bfd"/>
+      android:pathData="M525.85,541.21l-18.47,-0.29l2.22,62.97l16.25,0l0,-62.68z"
+      android:fillColor="#ffb7b7"/>
   <path
-      android:pathData="M358.76,364.04h-34.22c-0.86,0 -1.56,0.7 -1.56,1.56s0.7,1.56 1.56,1.56h34.22c0.86,0 1.56,-0.7 1.56,-1.56s-0.7,-1.56 -1.56,-1.56Z"
-      android:fillColor="#246bfd"/>
+      android:pathData="M529.99,598.58l-32,-0h-0A20.39,20.39 0,0 0,477.59 618.97v0.66l52.4,0Z"
+      android:fillColor="#2f2e41"/>
   <path
-      android:pathData="M306.76,381.15h-34.22c-0.86,0 -1.56,0.7 -1.56,1.56s0.7,1.56 1.56,1.56h34.22c0.86,0 1.56,-0.7 1.56,-1.56s-0.7,-1.56 -1.56,-1.56Z"
-      android:fillColor="#246bfd"/>
+      android:pathData="M648.16,524.51l-20.18,12.96l40.37,48.57l13.67,-8.78l-33.86,-52.74z"
+      android:fillColor="#ffb7b7"/>
   <path
-      android:pathData="M358.76,381.15h-34.22c-0.86,0 -1.56,0.7 -1.56,1.56s0.7,1.56 1.56,1.56h34.22c0.86,0 1.56,-0.7 1.56,-1.56s-0.7,-1.56 -1.56,-1.56Z"
-      android:fillColor="#246bfd"/>
+      android:pathData="M682.65,570.55 L655.72,587.84l-0,0a20.39,20.39 0,0 0,-6.14 28.18l0.36,0.56 44.09,-28.31Z"
+      android:fillColor="#2f2e41"/>
   <path
-      android:pathData="M412.32,382.71c0,-0.86 -0.7,-1.56 -1.56,-1.56h-34.22c-0.86,0 -1.56,0.7 -1.56,1.56s0.7,1.56 1.56,1.56h34.22c0.86,0 1.56,-0.7 1.56,-1.56Z"
-      android:fillColor="#246bfd"/>
-  <path
-      android:pathData="M286.76,350.38c0.86,0 1.56,-0.7 1.56,-1.56s-0.7,-1.56 -1.56,-1.56h-34.22c-0.86,0 -1.56,0.7 -1.56,1.56s0.7,1.56 1.56,1.56h34.22Z"
-      android:fillColor="#246bfd"/>
-  <path
-      android:pathData="M387.54,349.74h34.22c0.86,0 1.56,-0.7 1.56,-1.56s-0.7,-1.56 -1.56,-1.56h-34.22c-0.86,0 -1.56,0.7 -1.56,1.56s0.7,1.56 1.56,1.56Z"
-      android:fillColor="#246bfd"/>
-  <path
-      android:pathData="M301.18,350.07h70.95c0.86,0 1.56,-0.7 1.56,-1.56s-0.7,-1.56 -1.56,-1.56h-70.95c-0.86,0 -1.56,0.7 -1.56,1.56s0.7,1.56 1.56,1.56Z"
-      android:fillColor="#246bfd"/>
-  <path
-      android:pathData="M329.09,396.69h-34.22c-0.86,0 -1.56,0.7 -1.56,1.56s0.7,1.56 1.56,1.56h34.22c0.86,0 1.56,-0.7 1.56,-1.56s-0.7,-1.56 -1.56,-1.56Z"
-      android:fillColor="#246bfd"/>
-  <path
-      android:pathData="M439.61,316.2v106c0,9.37 -7.63,17 -17,17h-106c-9.37,0 -17,-7.63 -17,-17v-106c0,-9.37 7.63,-17 17,-17h106c9.37,0 17,7.63 17,17Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M439.61,316.2v106c0,9.37 -7.63,17 -17,17h-106c-9.37,0 -17,-7.63 -17,-17v-106c0,-9.37 7.63,-17 17,-17h106c9.37,0 17,7.63 17,17ZM416.04,437.2c11.92,0 21.58,-9.66 21.58,-21.58v-46.87c0,-37.31 -30.25,-67.56 -67.56,-67.56h-53.44c-8.28,0 -15,6.72 -15,15v91.21c0,16.45 13.34,29.79 29.79,29.79h84.63v0h-0Z"
+      android:pathData="M655.35,332.24s-44.84,-148.93 -59.25,-150.94 -37.63,38.21 -37.63,38.21c-30.1,38.41 -61.14,162.82 -61.14,162.82s51.75,3.24 89.57,23.36 82.47,-1.02 82.47,-1.02Z"
       android:fillColor="#3f3d56"/>
   <path
-      android:pathData="M383.72,342.49h-34.22c-0.86,0 -1.56,-0.7 -1.56,-1.56s0.7,-1.56 1.56,-1.56h34.22c0.86,0 1.56,0.7 1.56,1.56s-0.7,1.56 -1.56,1.56v0Z"
+      android:fillColor="#FF000000"
+      android:pathData="M655.35,332.24s-44.84,-148.93 -59.25,-150.94 -31.73,38.62 -31.73,38.62c-15,62 -67.04,162.41 -67.04,162.41s51.75,3.24 89.57,23.36 82.47,-1.02 82.47,-1.02Z"
+      android:strokeAlpha="0.1"
+      android:fillAlpha="0.1"/>
+  <path
+      android:pathData="M618.57,287.68l0,74.83l8.81,108.4l44,82l-21,15l-60,-78l-23.73,-77.45l-37.27,171.45l-28,-2l19.45,-237.71l36.9,-66.91l60.85,10.38z"
+      android:fillColor="#2f2e41"/>
+  <path
+      android:pathData="M573.36,215.3c-14,14 -1,29 -1,29l-16,36 63,17 22.02,-98.38 -15,-16c-30,-1 -30.02,-1.62 -30.02,-1.62C591.1,186.44 573.36,215.3 573.36,215.3Z"
       android:fillColor="#246bfd"/>
   <path
-      android:pathData="M383.72,375.85h-34.22c-0.86,0 -1.56,-0.7 -1.56,-1.56s0.7,-1.56 1.56,-1.56h34.22c0.86,0 1.56,0.7 1.56,1.56s-0.7,1.56 -1.56,1.56v0Z"
-      android:fillColor="#246bfd"/>
+      android:pathData="M643.91,188.73a26.88,26.88 0,0 0,-37.78 5.91c-15.84,22.05 -30.48,57.66 -10.3,102.07 32.4,71.31 60.59,107.81 72.06,107.81a4.56,4.56 0,0 0,1.47 -0.23c7.06,-2.39 17.26,-14.33 19.1,-24.85 0.66,-3.77 0.5,-9.01 -4,-12.61 -12.94,-10.35 -36.16,-42.56 -43.4,-84.96 -4,-23.43 3.76,-44.77 10.98,-58.55a26.88,26.88 0,0 0,-7.78 -34.33h0Z"
+      android:fillColor="#3f3d56"/>
   <path
-      android:pathData="M366.72,421.85h-34.22c-0.86,0 -1.56,-0.7 -1.56,-1.56s0.7,-1.56 1.56,-1.56h34.22c0.86,0 1.56,0.7 1.56,1.56s-0.7,1.56 -1.56,1.56v0Z"
-      android:fillColor="#246bfd"/>
+      android:pathData="M611.25,141.21m-23.25,12.71a26.5,26.5 106.34,1 1,46.51 -25.42a26.5,26.5 106.34,1 1,-46.51 25.42"
+      android:fillColor="#ffb7b7"/>
   <path
-      android:pathData="M402.08,359.18h-70.95c-0.86,0 -1.56,-0.7 -1.56,-1.56s0.7,-1.56 1.56,-1.56h70.95c0.86,0 1.56,0.7 1.56,1.56s-0.7,1.56 -1.56,1.56v0Z"
-      android:fillColor="#246bfd"/>
+      android:pathData="M573.98,139.21h38.27l0.39,-5.49 1.96,5.49h5.89l0.78,-10.89 3.89,10.89h11.4v-0.54a28.62,28.62 0,0 0,-28.59 -28.59h-5.39A28.62,28.62 0,0 0,573.98 138.67Z"
+      android:fillColor="#2f2e41"/>
   <path
-      android:pathData="M419.67,257.46c0,-33.07 -27.95,-51.26 -59.87,-59.87 -40.93,-11.05 -70.91,11.31 -59.87,59.87 2.5,11.01 8.48,23.86 15.89,34.86h58.75c19.63,-12.78 45.11,-9.19 45.11,-34.86Z"
-      android:fillColor="#246bfd"/>
-  <path
-      android:pathData="M358.91,319.97c3.34,-6.37 7.58,-10.97 12.25,-14.47h-55.03c14.16,20.23 32.95,33.22 42.78,14.47Z"
-      android:fillColor="#246bfd"/>
-  <path
-      android:pathData="M352.56,222.06c3.53,0 6.4,2.86 6.4,6.4v12.79h-12.79v-12.79c0,-3.53 2.86,-6.4 6.4,-6.4ZM362.16,241.25v-12.79c0,-5.3 -4.3,-9.6 -9.6,-9.6s-9.6,4.3 -9.6,9.6v12.79c-3.53,0 -6.4,2.86 -6.4,6.4v15.99c0,3.53 2.86,6.4 6.4,6.4h19.19c3.53,0 6.4,-2.86 6.4,-6.4v-15.99c0,-3.53 -2.86,-6.4 -6.4,-6.4h0ZM342.97,244.45h19.19c1.77,0 3.2,1.43 3.2,3.2v15.99c0,1.77 -1.43,3.2 -3.2,3.2h-19.19c-1.77,0 -3.2,-1.43 -3.2,-3.2v-15.99c0,-1.77 1.43,-3.2 3.2,-3.2Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M261.15,296.54c-0.77,6.44 1.93,12.06 6.02,12.55s8.05,-4.33 8.82,-10.77c0.34,-2.82 0.01,-5.48 -0.81,-7.62l2.93,-27.33 -12.85,-1.1 -1.52,27.06c-1.3,1.89 -2.25,4.4 -2.58,7.22Z"
-      android:fillColor="#ffb6b6"/>
-  <path
-      android:pathData="M264.23,133.5s14,-4 17,2 10,85 10,85l-13.5,63.06 -15.5,-4.06 8,-64 -11,-48 5,-34Z"
-      android:fillColor="#e6e6e6"/>
-  <path
-      android:pathData="M58.5,266.84m-58.5,0a58.5,58.5 0,1 1,117 0a58.5,58.5 0,1 1,-117 0"
-      android:fillColor="#246bfd"/>
-  <path
-      android:pathData="M58.5,240.65c4.13,0 7.48,3.35 7.48,7.48v14.97h-14.97v-14.97c0,-4.13 3.35,-7.48 7.48,-7.48ZM69.72,263.1v-14.97c0,-6.2 -5.03,-11.22 -11.22,-11.22s-11.22,5.03 -11.22,11.22v14.97c-4.13,0 -7.48,3.35 -7.48,7.48v18.71c0,4.13 3.35,7.48 7.48,7.48h22.45c4.13,0 7.48,-3.35 7.48,-7.48v-18.71c0,-4.13 -3.35,-7.48 -7.48,-7.48h0ZM47.28,266.84h22.45c2.07,0 3.74,1.68 3.74,3.74v18.71c0,2.07 -1.68,3.74 -3.74,3.74h-22.45c-2.07,0 -3.74,-1.68 -3.74,-3.74v-18.71c0,-2.07 1.68,-3.74 3.74,-3.74Z"
-      android:fillColor="#fff"/>
+      android:pathData="M630.78,158.95 L647.11,153.66L647.11,114L616.26,114l0.76,0.76C627.65,125.37 639.47,163.02 630.78,158.95Z"
+      android:fillColor="#2f2e41"/>
 </vector>
