--- a/app/src/main/res/layout/fragment_sign_up_doctor.xml
+++ b/app/src/main/res/layout/fragment_sign_up_doctor.xml
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_doctor_details"
+            android:id="@+id/tv_create_new_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing_normal"
@@ -48,7 +48,7 @@
             android:src="@drawable/doctor_register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_details" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_create_new_password" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_doctor_form"
